updated deployments for restore and back up and updates readme and some adjustments to values.yaml

--- a/stable/etcd-operator/templates/backup-operator-deployment.yaml
+++ b/stable/etcd-operator/templates/backup-operator-deployment.yaml
@@ -41,6 +41,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        resources:
+          limits:
+            cpu: {{ .Values.backupOperator.resources.cpu }}
+            memory: {{ .Values.backupOperator.resources.memory }}
+          requests:
+            cpu: {{ .Values.backupOperator.resources.cpu }}
+            memory: {{ .Values.backupOperator.resources.memory }}
     {{- if .Values.backupOperator.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.backupOperator.nodeSelector | indent 8 }}
