[incubator/cassandra] Add image pull secrets to statefulset template
* update statefulset template
* add new parameter to README

--- a/incubator/cassandra/templates/cassandra-statefulset.yaml
+++ b/incubator/cassandra/templates/cassandra-statefulset.yaml
@@ -103,6 +103,10 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /var/lib/cassandra
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+        - name: {{ .Values.image.pullSecrets }}
+      {{- end }}
 {{- if not .Values.persistence.enabled }}
       volumes:
       - name: data
