--- a/stable/drupal/requirements.yaml
+++ b/stable/drupal/requirements.yaml
@@ -2,3 +2,4 @@ dependencies:
 - name: mariadb
   version: 1.0.5
   repository: https://kubernetes-charts.storage.googleapis.com/
+  condition: mariadb.enabled
