[stable/chaoskube] add RBAC support

--- a/stable/chaoskube/templates/deployment.yaml
+++ b/stable/chaoskube/templates/deployment.yaml
@@ -35,3 +35,4 @@ spec:
           limits:
             cpu: {{ .Values.resources.cpu }}
             memory: {{ .Values.resources.memory }}
+      serviceAccountName: {{ if .Values.rbac.create }}{{ printf "%s-%s" .Release.Name .Values.name }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
