--- a/stable/chaoskube/values.yaml
+++ b/stable/chaoskube/values.yaml
@@ -29,3 +29,10 @@ dryRun: true
 resources:
   cpu: 10m
   memory: 16Mi
+
+# create service account with permission to list and kill pods
+rbac:
+  create: false
+
+  # only used when create is false
+  serviceAccountName: default
