[stable/kubernetes-dashboard] Fixed ingress configuration when no hostname provided (#2611)
* Fixed kubernetes-dashboard configuring with no-hostname defined

* Bumped chart version

* Fixed indentation

--- a/stable/kubernetes-dashboard/templates/ingress.yaml
+++ b/stable/kubernetes-dashboard/templates/ingress.yaml
@@ -16,9 +16,18 @@ metadata:
   name: {{ template "kubernetes-dashboard.fullname" . }}
 spec:
   rules:
+  {{- if .Values.ingress.hosts }}
   {{- range .Values.ingress.hosts }}
     - host: {{ . }}
       http:
+        paths:
+          - path: /
+            backend:
+              serviceName: {{ $fullName }}
+              servicePort: {{ $httpPort }}
+  {{- end -}}
+  {{- else }}
+    - http:
         paths:
           - path: /
             backend:
