--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -29,7 +29,12 @@ acme:
   email: admin@example.com
   staging: true
   ## Set dnsProvider to perform domain verification using dns challenge
-  dnsProvider: nil
+  dnsProvider:
+    name: route53
+    config:
+      - AWS_REGION: us-east-1
+      - AWS_ACCESS_KEY_ID: ...
+      - AWS_SECRET_ACCESS_KEY: ...
   ## Save ACME certs to a persistent volume. WARNING: If you do not do this, you will re-request
   ## certs every time a pod (re-)starts and you WILL be rate limited!
   persistence:
@@ -76,8 +81,6 @@ service:
   #   https: 30443
 gzip:
   enabled: true
-## Environment variables for the Traefik pod
-env:
 accessLogs:
   enabled: false
   ## Path to the access logs file. If not provided, Traefik defaults it to stdout.
