--- a/stable/traefik/templates/dns-provider-secret.yaml
+++ b/stable/traefik/templates/dns-provider-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.acme.enabled .Values.acme.dnsProvider }}
+{{- if and .Values.acme.enabled .Values.acme.dnsProvider.name }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,5 +10,7 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  # TODO(kevinjqiu) iterate through config variables and b64encode them.
+{{- range $k, $v := .Values.acme.dnsProvider.config }}
+  {{ $k }}: {{ $v | b64enc }}
+{{- end }}
 {{- end }}
