use .Release.Name for fullname

--- a/incubator/redis-exporter/templates/deployment.yaml
+++ b/incubator/redis-exporter/templates/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "redis-exporter.fullname" . }}
@@ -23,7 +23,7 @@ spec:
             - containerPort: {{ .Values.service.internalPort }}
           env:
             - name: REDIS_ADDR
-              value: {{ .Values.redisAddress }}	  
+              value: {{ .Values.redisAddress }}
           livenessProbe:
             httpGet:
               path: /
