--- a/incubator/redis-exporter/values.yaml
+++ b/incubator/redis-exporter/values.yaml
@@ -9,6 +9,6 @@ service:
   internalPort: 9121
   annotations:
     prometheus.io/scrape: "true"
-    prometheus.io/port: 9121
+    prometheus.io/port: "9121"
 resources: {}
 redisAddress: redis://myredis:6379
