--- a/stable/aerospike/Chart.yaml
+++ b/stable/aerospike/Chart.yaml
@@ -10,5 +10,5 @@ icon: https://s3-us-west-1.amazonaws.com/aerospike-fd/wp-content/uploads/2016/06
 sources:
 - https://github.com/aerospike/aerospike-server
 maintainers:
-- name: Kaveh Mousavi Zamani
+- name: kavehmzta
   email: k.mousavizamani@travelaudience.com
