--- a/stable/postgresql/values.yaml
+++ b/stable/postgresql/values.yaml
@@ -11,6 +11,11 @@ imageTag: "9.6.2"
 ##
 # imagePullPolicy:
 
+## Specify imagePullSecrets
+## ref: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
+##
+# imagePullSecrets: myregistrykey
+
 ## Create a database user
 ## Default: postgres
 # postgresUser:
