--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -36,8 +36,8 @@ acme:
   logging: false
   ## Set dnsProvider to perform domain verification using dns challenge
   dnsProvider:
-    # name: route53
-    # config:
+    name: ""
+    config: {}
     #   - AWS_REGION: us-east-1
     #   - AWS_ACCESS_KEY_ID: ""
     #   - AWS_SECRET_ACCESS_KEY: ""
