incubator/vault: add annotations support to service
This allows various customizations of the behavior of the service,
including the use of GKE internal load balancing [1]

[1] https://cloud.google.com/kubernetes-engine/docs/internal-load-balancing

--- a/incubator/vault/values.yaml
+++ b/incubator/vault/values.yaml
@@ -10,6 +10,8 @@ service:
   name: vault
   type: ClusterIP
   port: 8200
+  #annotations:
+    # cloud.google.com/load-balancer-type: "Internal"
 ingress:
   enabled: false
   # Used to create Ingress record (should used with service.type: ClusterIP).
