Change to less nested structure for values

--- a/incubator/docker-registry/templates/configmap.yaml
+++ b/incubator/docker-registry/templates/configmap.yaml
@@ -9,4 +9,4 @@ metadata:
     release: {{ .Release.Name }}
 data:
   config.yml: |-
-{{ toYaml .Values.registry.configData | indent 4 }}
+{{ toYaml .Values.configData | indent 4 }}
