--- a/incubator/docker-registry/templates/secret.yaml
+++ b/incubator/docker-registry/templates/secret.yaml
@@ -9,17 +9,17 @@ metadata:
     release: {{ .Release.Name }}
 type: Opaque
 data:
-  {{- if index .Values.registry.secrets "ha-shared-secret"  }}
-  ha-shared-secret: {{ index .Values.registry.secrets "ha-shared-secret" | b64enc | quote }}
+  {{- if index .Values.secrets "ha-shared-secret"  }}
+  ha-shared-secret: {{ index .Values.secrets "ha-shared-secret" | b64enc | quote }}
   {{- else }}
   ha-shared-secret: {{ randAlphaNum 16 | b64enc | quote }}
   {{- end }}
-  {{- if .Values.registry.s3Storage }}
+  {{- if .Values.s3Storage }}
   {{- if .Values.minio.enabled }}
   s3-access-key: {{ .Values.minio.accessKey | b64enc | quote }}
   s3-secret-key: {{ .Values.minio.secretKey | b64enc | quote }}
   {{- else }}
-  s3-access-key: {{ index .Values.registry.secrets.s3 "access-key" | b64enc | quote }}
-  s3-secret-key: {{ index .Values.registry.secrets.s3 "secret-key" | b64enc | quote }}
+  s3-access-key: {{ index .Values.secrets.s3 "access-key" | b64enc | quote }}
+  s3-secret-key: {{ index .Values.secrets.s3 "secret-key" | b64enc | quote }}
   {{- end }}
   {{- end }}
