--- a/incubator/vault/values.yaml
+++ b/incubator/vault/values.yaml
@@ -42,13 +42,23 @@ vault:
   # https://www.vaultproject.io/intro/getting-started/dev-server.html for more
   # information.
   dev: true
+  # Allows the mounting of various custom secrets th enable production vault
+  # configurations. The comments show an example usage for mounting a TLS
+  # secret. The two fields required are a secretName indicating the name of
+  # the Kuberentes secret (created outside of this chart), and the mountPath
+  # at which it should be mounted in the Vault container.
+  customSecrets: []
+    #- secretName: vault-tls
+    #  mountPath: /vault/tls
   config:
     # A YAML representation of a final vault config.json file.
     # See https://www.vaultproject.io/docs/configuration/ for more information.
     listener:
       tcp:
         address: '[::]:8200'
-        tls_disable: 1
+        tls_disable: true
+        #tls_cert_file: /vault/tls/server.crt
+        #tls_key_file: /vault/tls/server.key
     # See https://www.vaultproject.io/docs/configuration/storage/ for storage backends
     storage:
       #consul:
@@ -65,3 +75,7 @@ vault:
       #  access_key: ""
       #  secret_key: ""
       #  endpoint: "" # When not using AWS S3
+      #gcs:
+      #  bucket: ""
+      #  # Use a custom secret to mount this file.
+      #  credentials_file: ""
