--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -58,6 +58,11 @@ controller:
   ##
   kind: Deployment
 
+  ## Only if controller.kind=DaemonSet
+  ## Make controller available on hostPort (http on 80/tcp, https on 443/tcp and stats on 18080/tcp)
+  ##
+  enableHostPort: true
+
   # The update strategy to apply to the Deployment or DaemonSet
   ##
   updateStrategy: {}
@@ -74,9 +79,6 @@ controller:
   #    value: "value"
   #    effect: "NoSchedule|PreferNoSchedule|NoExecute(1.6 only)"
 
-  daemonset:
-    hostPort: false
-  
   ## Node labels for controller pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
