Move storage config into env vars
This will allow us to override that storage easier.
If this is in the configData map it will get merged into local overrides
and the container doesn't boot.

--- a/incubator/docker-registry/templates/deployment.yaml
+++ b/incubator/docker-registry/templates/deployment.yaml
@@ -45,6 +45,10 @@ spec:
             cpu: 100m
             memory: 256Mi
         env:
+{{- if .Values.filesystemStorage }}
+          - name: REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY
+            value: "/var/lib/registry"
+{{- end }}
         volumeMounts:
         - name: "{{ template "docker-registry.fullname" . }}-config"
           mountPath: "/etc/docker/registry"
