--- a/stable/ghost/values.yaml
+++ b/stable/ghost/values.yaml
@@ -67,9 +67,28 @@ allowEmptyPassword: yes
 # smtpService:
 
 ##
+## External database configuration
+##
+externalDatabase:
+  ## Database host
+  # host:
+
+  ## Database user
+  # user: bn_ghost
+
+  ## Database password
+  # password:
+
+  ## Database name
+  # database: bitnami_ghost
+
+##
 ## MariaDB chart configuration
 ##
 mariadb:
+  ## Whether to use the database specified as a requirement or not. For example, to configure the chart with an existing database server.
+  enabled: true
+
   ## MariaDB admin password
   ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
   ##
