Adding a way to disable the Agent DaemonSet (to let the user run it as a sidecar container)

--- a/incubator/jaeger/templates/agent-ds.yaml
+++ b/incubator/jaeger/templates/agent-ds.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.agent.enabled -}}
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -46,3 +47,4 @@ spec:
           protocol: UDP
         resources:
 {{ toYaml .Values.agent.resources | indent 10 }}
+{{- end -}}
