Add rbac support to chaoskube chart.
Adds values field `rbac` with `install` boolean to control generating a
an appropriate cluster role, binding and service account to allow the
chaoskube to operate.

--- a/stable/chaoskube/templates/deployment.yaml
+++ b/stable/chaoskube/templates/deployment.yaml
@@ -17,6 +17,9 @@ spec:
         release: {{ .Release.Name }}
         heritage: {{ .Release.Service }}
     spec:
+      {{- if .Values.rbac.install }}
+      serviceAccount: {{ template "serviceName" . }}
+      {{- end }}
       containers:
       - name: {{ .Values.name }}
         image: {{ .Values.image }}:{{ .Values.imageTag }}
