[stable/influxdb] Add default values for user creation Job (#2687)

--- a/stable/influxdb/templates/post-install-set-auth.yaml
+++ b/stable/influxdb/templates/post-install-set-auth.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     "helm.sh/hook": post-install
 spec:
-  activeDeadlineSeconds: {{ default 300 .Values.setDefaultUser.activeDeadlineSeconds }}
+  activeDeadlineSeconds: {{ .Values.setDefaultUser.activeDeadlineSeconds }}
   template:
     metadata:
       labels:
