--- a/incubator/docker-registry/Chart.yaml
+++ b/incubator/docker-registry/Chart.yaml
@@ -1,12 +1,12 @@
-version: 0.2.2
-appVersion: 2
-description: private docker registry
+apiVersion: v1
+description: A Helm chart for Docker Registry
 name: docker-registry
-keywords:
-- docker
-- registry
+version: 0.2.3
+appVersion: 2.6.2
+home: https://hub.docker.com/_/registry/
+icon: https://hub.docker.com/public/images/logos/mini-logo.svg
+sources:
+  - https://github.com/docker/distribution-library-image
 maintainers:
-- name: sbezverk
-  email: sbezverk@cisco.com
-- name: Andrey Arapov
-  email: andrey.arapov@nixaid.com
+  - name: jpds
+    email: jpds@protonmail.com
