--- a/stable/kube-lego/Chart.yaml
+++ b/stable/kube-lego/Chart.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 description: Automatically requests certificates from Let's Encrypt
 name: kube-lego
-version: 0.2.1
+version: 0.2.2
 keywords:
   - kube-lego
   - letsencrypt
 sources:
   - https://github.com/jetstack/kube-lego/tree/master/examples/nginx
 maintainers:
-  - name: Jack Zampolin
+  - name: jackzampolin
     email: jack.zampolin@gmail.com
-  - name: Michael Goodness
+  - name: mgoodness
     email: mgoodness@gmail.com
 engine: gotpl
