Add route53 and azure dns provider values

--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -36,11 +36,17 @@ acme:
   logging: false
   ## Set dnsProvider to perform domain verification using dns challenge
   dnsProvider:
-    name: ""
-    config: {}
-    #   - AWS_REGION: us-east-1
-    #   - AWS_ACCESS_KEY_ID: ""
-    #   - AWS_SECRET_ACCESS_KEY: ""
+    name: route53
+    route53:
+      - AWS_REGION: us-east-1
+      - AWS_ACCESS_KEY_ID: ...
+      - AWS_SECRET_ACCESS_KEY: ...
+    azure:
+      - AZURE_CLIENT_ID: ...
+      - AZURE_CLIENT_SECRET: ...
+      - AZURE_SUBSCRIPTION_ID: ...
+      - AZURE_TENANT_ID: ...
+      - AZURE_RESOURCE_GROUP: ...
   ## Save ACME certs to a persistent volume. WARNING: If you do not do this, you will re-request
   ## certs every time a pod (re-)starts and you WILL be rate limited!
   persistence:
