Use discriminator to fetch the config values for providers

--- a/stable/traefik/templates/dns-provider-secret.yaml
+++ b/stable/traefik/templates/dns-provider-secret.yaml
@@ -10,7 +10,7 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-{{- range $k, $v := .Values.acme.dnsProvider.config }}
+{{- range $k, $v := (index .Values.acme.dnsProvider .Values.acme.dnsProvider.name) }}
   {{ $k }}: {{ $v | b64enc }}
 {{- end }}
 {{- end }}
