--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -31,16 +31,76 @@ acme:
   ## Set dnsProvider to perform domain verification using dns challenge
   dnsProvider:
     name: route53
-    route53:
-      - AWS_REGION: us-east-1
-      - AWS_ACCESS_KEY_ID: ...
-      - AWS_SECRET_ACCESS_KEY: ...
+    auroradns:
+      - AURORA_USER_ID: ""
+      - AURORA_KEY: ""
+      - AURORA_ENDPOINT: ""
     azure:
-      - AZURE_CLIENT_ID: ...
-      - AZURE_CLIENT_SECRET: ...
-      - AZURE_SUBSCRIPTION_ID: ...
-      - AZURE_TENANT_ID: ...
-      - AZURE_RESOURCE_GROUP: ...
+      - AZURE_CLIENT_ID: ""
+      - AZURE_CLIENT_SECRET: ""
+      - AZURE_SUBSCRIPTION_ID: ""
+      - AZURE_TENANT_ID: ""
+      - AZURE_RESOURCE_GROUP: ""
+    cloudflare:
+      - CLOUDFLARE_EMAIL: ""
+      - CLOUDFLARE_API_KEY: ""
+    digitalocean:
+      - DO_AUTH_TOKEN: ""
+    dnsimple:
+      - DNSIMPLE_OAUTH_TOKEN: ""
+      - DNSIMPLE_BASE_URL: ""
+    dnsmadeeasy:
+      - DNSMADEEASY_API_KEY: ""
+      - DNSMADEEASY_API_SECRET: ""
+      - DNSMADEEASY_SANDBOX: ""
+    dnspod:
+      - DNSPOD_API_KEY: ""
+    dyn:
+      - DYN_CUSTOMER_NAME: ""
+      - DYN_USER_NAME: ""
+      - DYN_PASSWORD: ""
+    exoscale:
+      - EXOSCALE_API_KEY: ""
+      - EXOSCALE_API_SECRET: ""
+      - EXOSCALE_ENDPOINT: ""
+    gandi:
+      - GANDI_API_KEY: ""
+    godaddy:
+      - GODADDY_API_KEY: ""
+      - GODADDY_API_SECRET: ""
+    googlecloud:
+      - GCE_PROJECT: ""
+      - GCE_SERVICE_ACCOUNT_FILE: ""
+    linode:
+      - LINODE_API_KEY: ""
+    namecheap:
+      - NAMECHEAP_API_USER: ""
+      - NAMECHEAP_API_KEY: ""
+    ns1:
+      - NS1_API_KEY: ""
+    otc:
+      - OTC_DOMAIN_NAME: ""
+      - OTC_USER_NAME: ""
+      - OTC_PASSWORD: ""
+      - OTC_PROJECT_NAME: ""
+      - OTC_IDENTITY_ENDPOINT: ""
+    pdns:
+      - PDNS_API_URL: ""
+    rackspace:
+      - RACKSPACE_USER: ""
+      - RACKSPACE_API_KEY: ""
+    rfc2136:
+      - RFC2136_NAMESERVER: ""
+      - RFC2136_TSIG_ALGORITHM: ""
+      - RFC2136_TSIG_KEY: ""
+      - RFC2136_TSIG_SECRET: ""
+      - RFC2136_TIMEOUT: ""
+    route53:
+      - AWS_REGION: ""
+      - AWS_ACCESS_KEY_ID: ""
+      - AWS_SECRET_ACCESS_KEY: ""
+    vultr:
+      - VULTR_API_KEY: ""
   ## Save ACME certs to a persistent volume. WARNING: If you do not do this, you will re-request
   ## certs every time a pod (re-)starts and you WILL be rate limited!
   persistence:
