--- a/incubator/etcd/Chart.yaml
+++ b/incubator/etcd/Chart.yaml
@@ -1,6 +1,6 @@
 name: etcd
 home: https://github.com/coreos/etcd
-version: 0.3.5
+version: 0.4.0
 description: Distributed reliable key-value store for the most critical data of a
   distributed system.
 icon: https://raw.githubusercontent.com/coreos/etcd/master/logos/etcd-horizontal-color.png
@@ -9,3 +9,5 @@ sources:
 maintainers:
 - name: Lachlan Evenson
   email: lachlan@deis.com
+- name: Alex Knol
+  email: alex.knol@nearform.com
