[stable/nginx-ingress] allow override of StatusExporter.service.targetPort

--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -245,6 +245,7 @@ statsExporter:
     loadBalancerIP: ""
     loadBalancerSourceRanges: []
     servicePort: 9913
+    targetPort: 9913
     type: ClusterIP
 
 # TCP service key:value pairs
