[incubator/ibm-blockchain-network] Add template namespaces

--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org1peer1.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org1peer1.yaml
@@ -1,4 +1,10 @@
 ---
+name: {{ template "ibm-blockchain-chaincode.fullname" . }}-install-org1peer1
+labels:
+  app: {{ template "ibm-blockchain-chaincode.name" . }}
+  chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+  release: {{ .Release.Name }}
+  heritage: {{ .Release.Service }}
 apiVersion: v1
 kind: Pod
 metadata:
