--- a/incubator/ibm-blockchain-network/templates/blockchain.yaml
+++ b/incubator/ibm-blockchain-network/templates/blockchain.yaml
@@ -1,4 +1,10 @@
 ---
+name: {{ template "ibm-blockchain-network.fullname" . }}-blockchain
+labels:
+  app: {{ template "ibm-blockchain-network.name" . }}
+  chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+  release: {{ .Release.Name }}
+  heritage: {{ .Release.Service }}
 apiVersion: v1
 kind: Pod
 metadata:
