[incubator/ibm-blockchain-channel] Add template namespaces

--- a/incubator/ibm-blockchain-channel/templates/join_channel_org2peer1.yaml
+++ b/incubator/ibm-blockchain-channel/templates/join_channel_org2peer1.yaml
@@ -1,4 +1,10 @@
 ---
+name: {{ template "ibm-blockchain-channel.fullname" . }}-join-org2peer1
+labels:
+  app: {{ template "ibm-blockchain-channel.name" . }}
+  chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+  release: {{ .Release.Name }}
+  heritage: {{ .Release.Service }}
 apiVersion: v1
 kind: Pod
 metadata:
