Fix new line error in config, deployment has existingClaim support

--- a/stable/sonarqube/templates/config.yaml
+++ b/stable/sonarqube/templates/config.yaml
@@ -6,5 +6,5 @@ metadata:
 data:
   {{- if .Values.sonarProperties }}
   sonar.properties:
-    {{ .Values.sonarProperties | indent 4}}
+    {{ toYaml .Values.sonarProperties | indent 4}}
   {{- end}}
